tests/ui/codegen/evm-ir/validation/parse_empty_metadata.evmir
@module EmptyMetadata

bb0:
  push 1
  add !meta(foo= ) //~ ERROR: expected metadata value
